# Notebooks

./: Hello Shell Commands.ipynb  README.md  pyproject.toml  requirements.txt
AskYourDocumentsQuestions/: 0 - Intro.ipynb  00 - Intro.ipynb  01 - Hello LLM.ipynb  03 - Testing LLMs.ipynb  07 - Document Similarity Search.ipynb  08 - Document Keyword Search.ipynb  1 - First you need some documents.ipynb  8 - Document Hybrid Search.ipynb  README.md
General/: Check CUDA Version.ipynb
Resources/Example Documents/Science Translational Medicine/: Attribution.txt  LICENSE
SentenceTransformers/: HuggingFace_BioBERT-mnli-snli-scinli-scitail-mednli-stsb.ipynb  HuggingFace_all-MiniLM-L6-v2.ipynb  HuggingFace_all-mpnet-base-v2.ipynb  HuggingFace_instructor-xl.ipynb  HuggingFace_paraphrase-multilingual-MiniLM-L12-v2.ipynb
SentimentAnalysis/: HuggingFace_DefaultModel.ipynb
TalkToYourDocuments/: 00 - Intro.ipynb  01 - Hello LLM.ipynb  02 - Talk to your SQL (Optional).ipynb  LICENSE  README.md
TalkToYourDocuments/v1/: Document Loader for Embeddings.ipynb  Hello Azure OpenAI  Hello LLM with Chat History.ipynb  Hello LLM.ipynb
TalkToYourDocuments/v1/Azure Cognitive Search/Hybrid Search/: Hybrid Search Query
TalkToYourDocuments/v1/Azure Cognitive Search/Keyword Search Index/: List Indexes.ipynb  Query Index for Response Highlights.ipynb  Query Index for Responses.ipynb
TalkToYourDocuments/v1/Azure Cognitive Search/Vector Database/: Store and Query Embeddings.ipynb
TalkToYourDocuments/v1/Document Storage and Indexing/Dense - Vector Stores/: Chroma.ipynb  FAISS.ipynb
TalkToYourDocuments/v1/Embeddings/: OpenAI ada-002 Embedding.ipynb
TalkToYourDocuments/v2/: 01 - Hello LLM.ipynb  02 - Talk to your SQL (Optional).ipynb
TextGeneration/: HuggingFace_redpajama-3b-chat.ipynb
TextToImage/: HuggingFace_StableDiffusion-v1-5.ipynb
