[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Mrowr Purr <mrowr.purr@gmail.com>"]
license = "0BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.31.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
ipywidgets = "^8.1.0"
gradio = "^3.39.0"
ipykernel = "^6.25.0"
poethepoet = "^0.21.1"

[tool.poe.tasks]
install-pytorch = "python -m pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
install-deps = "python -m pip install invisible_watermark transformers accelerate safetensors 'diffusers[torch]'"
freeze = "python -m pip freeze"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
